--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">App_Motivation</string>
+    <string name="new_phrase">New phrase</string>
+    <string name="your_name">Your name?</string>
+    <string name="user">User</string>
+    <string name="phrase">Phrase</string>
+    <string name="save">Save</string>
+    <string name="lets_begin">Lets begin</string>
+    <string name="phrases_all">All phrases</string>
+    <string name="phrases_motivation">Motivation phrases</string>
+    <string name="phrases_morning">Morning phrases</string>
+
+    <string name="validation_mandatory_name">What\'s your name?</string>
+
 </resources>
